# ai-teacher

./: README.md  config.ini  pyproject.toml
src/ai_teacher/: chat_graph.py  download.py  llm_selector.py  main.py  test.py
